[gd_scene load_steps=9 format=2]

[ext_resource path="res://world/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/FinalMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://interface/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://interface/Coords.gd" type="Script" id=6]
[ext_resource path="res://Health.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 8, 1.5 )

[node name="Level1" parent="." instance=ExtResource( 1 )]

[node name="FinalMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Coords" type="RichTextLabel" parent="."]
margin_right = 338.0
margin_bottom = 223.0
custom_fonts/normal_font = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="RichTextLabel" parent="."]
margin_left = 23.7432
margin_top = 643.109
margin_right = 359.743
margin_bottom = 683.109
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="level_completed" from="Level1" to="." method="_on_Level1_level_completed"]
[connection signal="retried" from="FinalMenu" to="." method="_on_FinalMenu_retried"]
